# cognitive-document-reader

./: .gitignore  COGNITIVE_DOCUMENT_READER_SPECS.md  COGNITIVE_DOCUMENT_READER_SPECS_es.md  LICENSE  MOTIVATION.md  MOTIVATION_es.md  README.md  SPECS_v1_es.md  SPECS_v2.md  SPECS_v2_es.md  env.example  pyproject.toml
.cursor/rules/: cli-interface.mdc  cognitive-document-reader.mdc  llm-integration.mdc  pydantic-models.mdc  testing-standards.mdc
docs/: COGNITIVE_READING_ALGORITHM.md  COGNITIVE_READING_ALGORITHM_es.md  MOTIVATION.md  MOTIVATION_es.md  SPECS_v1.md  SPECS_v1_es.md  SPECS_v2.md  SPECS_v2_es.md  SPECS_v3.md  SPECS_v3_es.md
examples/: 3 pasos contra el sedentarismo.md  advanced_parsing.py  basic_usage.py  sample_document.md  sample_document_es.md  semantic_evaluation_demo.py
src/cognitive_reader/: __init__.py  _version.py
src/cognitive_reader/cli/: __init__.py  main.py  semantic_eval.py
src/cognitive_reader/core/: __init__.py  progressive_reader.py  synthesizer.py
src/cognitive_reader/evaluation/: __init__.py  base_test.py  semantic_evaluator.py  test_definitions.py
src/cognitive_reader/llm/: __init__.py  client.py  prompts.py
src/cognitive_reader/models/: __init__.py  config.py  document.py  knowledge.py  llm_responses.py  metrics.py
src/cognitive_reader/parsers/: __init__.py  docling_parser.py  structure_detector.py
src/cognitive_reader/utils/: __init__.py  language.py  logging_config.py  structure_formatter.py  text_cleaning.py  tokens.py
tests/: __init__.py  conftest.py
tests/integration/: test_cognitive_reader.py  test_fast_first_pass.py
tests/unit/: test_cli.py  test_cli_logging.py  test_cognitive_models.py  test_concept_filtering.py  test_config.py  test_development_features.py  test_disable_reasoning.py  test_incremental_synthesis.py  test_language_detection.py  test_logging_config.py  test_max_depth_feature.py  test_max_sections_feature.py  test_metrics.py  test_multi_pass_features.py  test_skip_glossary.py  test_stats_cli.py  test_structure_formatter.py  test_text_cleaning.py  test_unified_prompts.py
